--- a/css/style.css
+++ b/css/style.css
@@ -355,7 +355,7 @@ body {
 }
 .page5-con{
     width: 100%;
-    max-height: 436px;
+    max-height: 450px;
     padding-top: 80px;
     text-align: center;
     color: #fff;
@@ -454,7 +454,7 @@ footer{
 }
 
 
-/*关于我们*/
+/*鹿脴脫脷脦脪脙脟*/
 .about-head{
     height: 170px;
     margin-top: 80px;
@@ -536,7 +536,7 @@ footer.about{
 }
 
 
-/*加盟代理*/
+/*录脫脙脣麓煤脌铆*/
 .join-us{
     height: 200px;
     margin-top: 80px;
